[gd_scene load_steps=10 format=2]

[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://title_screen/titlescreen.png" type="Texture" id=2]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/logo.png" type="Texture" id=4]
[ext_resource path="res://title_screen/buttons/PlayButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen/buttons/CollectionButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://title_screen/buttons/TipsButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music/win-the-day.wav" type="AudioStream" id=8]
[ext_resource path="res://title_screen/AudioStreamPlayer.gd" type="Script" id=9]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.624908
margin_bottom = -0.624878
script = ExtResource( 1 )

[node name="TitleScreenBG" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.534, 0.558 )
texture = ExtResource( 2 )

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Logo" type="TextureRect" parent="."]
margin_left = 750.0
margin_top = 500.0
margin_right = 1022.0
margin_bottom = 698.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="VersionLabel" type="Label" parent="."]
margin_left = 460.0
margin_top = 575.0
margin_right = 546.0
margin_bottom = 589.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Version Label"

[node name="TitleText" type="Label" parent="."]
margin_left = 390.0
margin_top = 75.0
margin_right = 629.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sir Stanley's Well Rounded Adventure"
align = 1

[node name="PlayButton" parent="." instance=ExtResource( 5 )]
margin_left = 387.0
margin_top = 191.0
margin_right = 637.0
margin_bottom = 251.0
scene_to_load = "res://play/map.tscn"

[node name="CollectionButton" parent="." instance=ExtResource( 6 )]
margin_left = 387.0
margin_top = 336.0
margin_right = 637.0
margin_bottom = 396.0

[node name="TipsButton" parent="." instance=ExtResource( 7 )]
margin_left = 387.0
margin_top = 475.0
margin_right = 637.0
margin_bottom = 535.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
script = ExtResource( 9 )
[connection signal="fadeFinished" from="FadeIn" to="." method="_on_FadeIn_fadeFinished"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
